Closed Bug 959374 Opened 10 years ago Closed 10 years ago

Minor Navigator style and formatting fixes

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: nsm, Assigned: nsm)

Details

(Whiteboard: [qa-])

Attachments

(1 file, 1 obsolete file)

Attachment #8359435 - Attachment description: Bug XXXXXX - Minor Navigator style and formatting fixes. rs=bz → Minor Navigator style and formatting fixes.
Attachment #8359435 - Attachment is obsolete: true
Summary: Bug XXXXXX - Minor Navigator style and formatting fixes. rs=bz → Minor Navigator style and formatting fixes
bz, could you rs? please.
Flags: needinfo?(bzbarsky)
Comment on attachment 8359436 [details] [diff] [review]
Minor Navigator style and formatting fixes.

r=me
Attachment #8359436 - Flags: review+
Flags: needinfo?(bzbarsky)
https://hg.mozilla.org/mozilla-central/rev/141b703571fc
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: