Bug 959374 - Minor Navigator style and formatting fixes. r=bz